--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "license": "ISC",
     "dependencies": {
-        "json-server": "^0.17.4"
+        "json-server": "^0.17.4",
+        "node-sass": "^9.0.0"
     }
 }
