--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     },
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.2",
+        "cors": "^2.8.5",
         "json-server": "^0.17.4",
         "node-sass": "^9.0.0"
     }
