--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "dependencies": {
         "axios": "^1.6.2",
         "cors": "^2.8.5",
+        "file-loader": "^6.2.0",
         "json-server": "^0.17.4",
         "node-sass": "^9.0.0"
+    },
+    "devDependencies": {
+        "source-map-loader": "^4.0.1"
     }
 }
